--- a/blog/2019-05-28-hola.md
+++ b/blog/2019-05-28-hola.md
@@ -7,5 +7,10 @@ author_url: https://github.com/wgao19
 author_image_url: https://avatars1.githubusercontent.com/u/2055384?v=4
 tags: [hola, docusaurus]
 ---
+All this will be part of the blog post summary.
+
+Even this.
+
+<!--truncate-->
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque elementum dignissim ultricies. Fusce rhoncus ipsum tempor eros aliquam consequat. Lorem ipsum dolor sit amet
